objects/Web_Product__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Web Products</relationshipLabel>
        <relationshipName>Web_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Web Product</label>
    <nameField>
        <label>Web Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>